<resources>
    <string name="app_name">SocialMediaApplication</string>
    <string name="username_box">Username</string>
    <string name="password_box">Password</string>
    <string name="login_button_text">Login</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="terms_and_conditions">I agree with the terms and conditions.</string>
    <string name="sign_up">Sign Up</string>
</resources>
